## Copyright 2018 Yannic Bonenberger. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = [
        "grpc_web_response.go",
        "helpers.go",
        "options.go",
        "utils.go",
        "wrapper.go",
    ],
    importpath = "github.com/yannic/grpcweb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_cors//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)

proto_library(
    name = "test_proto",
    srcs = [
        "test.proto",
    ],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "test_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yannic/grpcweb/testproto",
    proto = ":test_proto",
)

go_test(
    name = "go_default_test",
    srcs = [
        "helpers_test.go",
        "wrapper_test.go",
    ],
    data = [
        "testdata/localhost.crt",
        "testdata/localhost.key",
    ],
    embed = [":go_default_library"],
    deps = [
        ":test_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_mwitkow_go_conntrack//connhelpers:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)
